--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#Keys
+petfeeder-iot-firebase-adminsdk-q55v5-6e2bb87433.json
+keys.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
