--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #Keys
-./petfeeder-iot-firebase-adminsdk-q55v5-6e2bb87433.json
-./keys.py
+petfeeder-iot-firebase-adminsdk-q55v5-6e2bb87433.json
+keys.py
+*.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
